<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/txt_register_page"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:elevation="15dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtUsernameRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/txt_username"
                        android:inputType="textPersonName"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="@font/roboto_light"
                        android:onClick="login"
                        android:text="@string/txt_login"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

                    <EditText
                        android:id="@+id/edtPasswordRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/txt_password"
                        android:inputType="textPassword"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtUsernameRegister" />

                    <EditText
                        android:id="@+id/edtConfirmPasswordRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/txt_confirm_password"
                        android:inputType="textPassword"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister" />

                    <EditText
                        android:id="@+id/edtNamaRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPasswordRegister" />

                    <EditText
                        android:id="@+id/edtAlamatRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="Address"
                        android:inputType="textPersonName"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtNamaRegister" />

                    <EditText
                        android:id="@+id/edtTelponRegister"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="Phone"
                        android:inputType="numberDecimal"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtAlamatRegister" />

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/open_sans_regular"
                        android:onClick="regis"
                        android:text="@string/txt_register_now"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/primary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtTelponRegister" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>